# qml-l10n-example

./: CMakeLists.txt  main.cpp  main.qml
l10n/: qml-l10n-idbased-example_en_GB.ts  qml-l10n-idbased-example_fr_FR.ts
